February 2021 - 1.5 Devel
- New feature: Added "Adif file deletion" checkbox. User can choose to show or not the message boxes after uploading QSOs.
- New feature: New function added to fill automatically the satMode field in satellites Tab depending on upload/download frequencies.

TBD - 1.5-RC4
TODO: Reviewing in the setup process.
- New feature: LoTW confirmation is also counted for DXCC & WAZ.
- New feature: DUPES are now identified when coming from WSJTX, ADIF logs, LoTW logs or simply adding a QSO.
- New feature: Added a time period to consider a QSO as DUPE if call, band & mode are also the same.
- Improvement: Hamlib now supports network communication (TNX DG1VS)
- Improvement: Optimized the way DXCC & WAZ are managed.
- Improvement: KLog receives the clear messages from WSJTX and is able to clear the KLog UI.
- Statistics: Added the Grids on Satellites statistics.
- Statistics: Added the DXCC on Satellites statistics.
- UI: Removed the QComboBox of the Setup Log tab to select the log. (TNX G4MKT)
- UI: Added the QSO per log in the logs setup.
- UI: Added a checkbox to keep the Propagation mode, if needed. Propagation mode is also linked to the Satellite tab. (TNX EA5WA)
- Bugfix: Improved the way the QSOs come from WSJT-X. (EA5WA)
- Bugfix: Double clicking on a call, while searching made the search to be redefined to that call and the previous search was lost.
- Bugfix: Satellite stats where not properly calculated. (TNX EA5WA)
- Bugfix: Identifying some bands was not properly done due to the names being in lower case.
- Bugfix: When importing an ADIF and asking for a default station callsign, it was only used for the first QSO, leaving the rest without a station callsign.
- Bugfix: Stats widget where not being properly created.
- Bugfix: The Log combobox on the Statistics was not working. (TNX EA5WA)
- Bugfix: End date tooltip updated on the export widget.(TNX G4MKT)
- Bugfix: DX Locator tooltip was not OK. (TNX G4MKT)

January 2021 - 1.4.6