@@ -1,4 +1,5 @@
 Jaime Robles, EA4K      - (2002-today)
+Juan Carlos Reig, EA5WA - (2021-today)
 Akihiro Koda, JL3OXR    - (2016, 2020)
 Andrew Goldie, ZL2ACG   - (2009-2010)
 
