@@ -2,4 +2,5 @@ TEMPLATE=subdirs
 SUBDIRS=\
    utilities \
    mainqsoentrywidget \
+   mainwindowsattab \
    world
